--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-native-firebase/app": "^13.1.0",
     "@react-native-firebase/auth": "^13.1.0",
     "@react-native-firebase/firestore": "^13.1.0",
+    "@react-native-firebase/storage": "^13.1.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-paper": "^4.10.1"
   },
   "devDependencies": {
