--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-firebase/firestore": "^13.1.0",
     "@react-native-firebase/storage": "^13.1.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-image-crop-picker": "^0.37.2",
